# RanobeLib2ebook

./: README.md  main.py  pyproject.toml  style.tcss
src/: api.py  config.py  epub.py  fb2.py  menu.py  model.py  utils.py
